# reviews_dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  out.txt  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_review_analysis.py  0003_public_http_mode.py  0004_admin_rbac.py  0005_scrapeops_mode.py  0006_twogis_api_mode.py  0007_response_first_seen.py  0008_companies.py  (+20 more)
apps/api/app/: main.py
apps/api/logs/: twogis_full.stdout  yandex_full.stdout
apps/api/scripts/: backfill_rating_snapshot.py  export_data.py  export_reviews_csv.py  import_companies_csv.py  import_data.py  load_rating_snapshots.py  scrape_metrics.py  scrape_reviews.py  sprav_chain_ratings.py  sprav_login.py  sprav_orgs.py  sprav_sync.py  sync_department_address.py  sync_ratings_to_sheet.py  twogis_account_check.py
apps/api/tests/: conftest.py  test_admin_auth.py  test_admin_rbac.py  test_analytics_summary.py  test_attention_evaluator.py  test_attention_rules_api.py  test_attention_sweep.py  test_auth.py  test_auth_me_permissions.py  test_company_service.py  test_cookie_import.py  test_cors_config.py  test_dashboard_attention_rules.py  test_dashboard_overview.py  test_dashboard_ratings.py  test_export_data.py  test_import_companies_csv.py  test_import_data.py  test_job_models.py  test_job_runner_metrics.py  test_job_runner_reviews.py  test_job_scheduler.py  test_job_service.py  test_jobs_api.py  test_load_rating_snapshots.py  test_markers.py  test_metrics_service.py  test_organization_company.py  test_organizations_api.py  test_problem_extractor.py  test_proxy_pool.py  test_query_counts.py  test_rating_snapshot.py  test_rbac.py  test_rbac_permissions.py  test_request_code_polling.py  test_response_date.py  test_response_timestamp.py  test_review_analysis_hash_unchanged.py  test_review_date_normalize.py  (+44 more)
(+351 files in other folders)
