[project]
name = "yandex-reviews-api"
version = "0.1.0"
description = "Yandex Maps reviews collector API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "PySocks>=1.7.1",  # SOCKS5 support for requests (rotating proxy pool)
    "sqladmin>=0.20.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",  # required by Starlette's SessionMiddleware (app/main.py)
    "gspread>=6.2.0",
    "google-auth>=2.35.0",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
